# Machine-Learning-and-Pattern-Recognition

./: CMakeLists.txt  CMakeLists_example.txt  README.md  exported_test_data.csv  exported_train_data.csv  main.cpp  main.py  makefile  pyvenv.cfg  test-final.csv  train-final.csv
Scripts/: activate  activate.bat
combined-1/combined/: afternoon_apurve_1.txt  afternoon_apurve_2.txt  afternoon_apurve_3.txt  afternoon_apurve_4.txt  afternoon_apurve_5.txt  afternoon_apurve_6.txt  afternoon_apurve_7.txt  afternoon_apurve_8.txt  afternoon_apurve_9.txt  afternoon_gautam_1.txt  afternoon_gautam_2.txt  afternoon_gautam_3.txt  afternoon_gautam_4.txt  afternoon_gautam_5.txt  afternoon_gautam_6.txt  afternoon_gautam_7.txt  afternoon_gautam_8.txt  afternoon_gautam_9.txt  afternoon_mahendra_1.txt  afternoon_mahendra_2.txt  afternoon_mahendra_3.txt  afternoon_mahendra_4.txt  afternoon_mahendra_5.txt  afternoon_mahendra_6.txt  afternoon_mahendra_7.txt  afternoon_mahendra_8.txt  afternoon_mahendra_9.txt  afternoon_parveen_1.txt  afternoon_parveen_2.txt  afternoon_parveen_3.txt  afternoon_parveen_4.txt  afternoon_parveen_5.txt  afternoon_parveen_6.txt  afternoon_parveen_7.txt  afternoon_parveen_8.txt  afternoon_parveen_9.txt  afternoon_pradeep_1.txt  afternoon_pradeep_2.txt  afternoon_pradeep_3.txt  afternoon_pradeep_4.txt  (+2660 more)
include/: coordinate.h  decision_tree.h  gesture.h  matplotlibcpp.h  model.h  preprocessor.h  visualizer.h
src/: model.cpp  preprocessor.cpp  visualizer.cpp
